[package]
name = "kit-tak"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] } # make sure this is the latest version
#futures-lite = "2.3.0"
# num = "0.4.3"
# num-derive = "0.4.2"
# num-traits = "0.2.19"
#rfd = {version = "0.14.1"}

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
